--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto", sans-serif;
+  background-color: #282c34;
+  min-height: calc(100vh - 30px);
+  overflow-x: hidden;
+  color: white;
+}
+
+#root {
+  height: calc(100vh - 30px);
 }
 
 code {
